# cpputils

./: .gitignore  CMakeLists.txt  README.md  common.hh  generate_build.sh  make_header.py  string.hh  test.hh  utils.hh
cmake/: ahmad1337_deps.cmake
include/cpputils/: common.hh  debug.hh  itertools.hh  linalg.hh  meta.hh  reflect.hh  string.hh
src/: string.cc
test/: test_itertools.cc  test_meta.cc  test_reflect.cc  test_string_utils.cc  test_utils.cc
